fixing permalink visibility in IE

--- a/public/stylesheets/DV/components/annotations.css
+++ b/public/stylesheets/DV/components/annotations.css
@@ -174,6 +174,7 @@
     }
 
   .DV-permalink {
+    zoom: 1;
     font-size: 16px;
     background: url(../../../images/DV/embed/link.png) no-repeat 0 0;
     padding-left: 16px;
